--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -3,8 +3,76 @@
   <!-- Page Content  -->
   <div id="content" class="p-4 p-md-5 pt-5">
     <h2 class="mb-2">Dashboard</h2>
+    <p><%= posts.length %> </p>
     <hr class="bg-black">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Title</th>
+          <th>#Content</th>
+          <th>Image</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% 
+          if (posts.length >0) {
+            var i=1
+            posts.forEach(function (post) {
+              %>
+              <tr>
+                <td class="text-italic"><%= i++; %></td>
+              <td class="table-title"><a href="/post/<%= post._id %>"><%= post.title %></a></td>
+              <td class="text-italic"><%= post.content.substring(0,100) %></td>
+              <td>
+                <img src="<%= post.image %>" alt="<%= post.image %>" width="100px">
+              </td>
+              <td >
+                <a href="#" class="btn btn-danger deletePost" data-id="<%= post._id %>">Delete</a>
+                </td>
+              </tr>
+              
+              <%
+            })
+            
+          }else{
+            %>
+            <tr>
+              <td colspan="4">No posts Found !</td>
+            </tr>
+            <%
+          }
+          
+          
+          %> 
+      </tbody>
+
+    </table>
     
   </div>
+
+  <script>
+  $(document).ready(function(){
+    $('.deletePost').click(function(){
+      var postId = $(this).attr('data-id');
+      var obj = $(this);
+
+      $.ajax({
+        url:"/delete-post",
+        type:"POST",
+        data:{id:postId},
+        success:function(response){
+          if(response.success== true){
+            $(obj).parent().parent().remove();
+            alert(response.msg);
+          }else{
+            alert(response.msg)
+          }
+        }
+      })
+    })
+  })  
+  </script>
 
   <%- include('../layout/admin-footer.ejs') %>
